--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -162,3 +162,114 @@ i {
 .dot.active {
     background-color: var(--main-color);
 }
+
+/* áreas de atuação */
+.text-image-section {
+    display: flex;
+
+    flex-wrap: wrap;
+
+    gap: 2rem;
+}
+
+.text-container {
+    display: flex;
+
+    flex: 2 1 0;
+
+    flex-direction: column;
+
+    gap: 2rem;
+
+    justify-content: center;
+
+    text-align: right;
+}
+
+.image-container {
+    flex: 1 1 300px;
+
+    position: relative;
+}
+
+.image-container i {
+    position: absolute;
+}
+
+.section-subtitle {
+    color: var(--main-color);
+
+    font-weight: bold;
+
+    text-transform: uppercase;
+}
+
+.section-title {
+    color: var(--secondary-text-color);
+
+    font-size: 2rem;
+}
+
+.btn {
+    align-self: flex-end;
+
+    background-color: var(--main-color);
+
+    color: var(--primary-text-color);
+
+    font-size: 1.4rem;
+
+    font-weight: bold;
+
+    padding: 1.2rem 1.8rem;
+
+    text-transform: uppercase;
+}
+
+#other-services {
+    display: flex;
+
+    gap: 2rem;
+
+    padding: 2rem;
+
+    width: 100%;
+}
+
+.service {
+    position: relative;
+}
+
+.service i {
+    font-size: 1.5rem;
+
+    left: 0;
+
+    padding: 1rem;
+
+    position: absolute;
+
+    top: 0;
+}
+
+.service-info {
+    background-color: var(--tertiary-color);
+
+    margin-top: -3rem;
+
+    min-height: 250px;
+
+    padding: 2rem 1.4rem;
+
+    position: relative;
+
+    z-index: 2;
+}
+
+.service h4 {
+    font-size: 1.8rem;
+
+    margin-bottom: 1rem;
+
+    text-transform: uppercase;
+}
