--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -273,3 +273,119 @@ i {
 
     text-transform: uppercase;
 }
+
+/* about */
+#about {
+    align-items: center;
+
+    display: flex;
+
+    flex-wrap: wrap;
+
+    gap: 2rem;
+}
+
+#about-text {
+    background-image: url("../imgs/pattern.png");
+
+    background-position: center;
+
+    background-repeat: no-repeat;
+
+    background-size: cover;
+
+    color: var(--primary-text-color);
+
+    display: flex;
+
+    flex: 1 1 0;
+
+    flex-direction: column;
+
+    justify-content: center;
+
+    gap: 2rem;
+
+    padding: 4rem 3rem;
+}
+
+#about-text .section-subtitle,
+#about-text .section-title {
+    color: var(--primary-text-color);
+}
+
+#about-text i {
+    background-color: transparent;
+}
+
+.about-description {
+    align-items: center;
+
+    display: flex;
+}
+
+.about-description h4 {
+    font-size: 1.4rem;
+
+    margin-bottom: 1rem;
+}
+
+#about-data {
+    display: flex;
+
+    flex: 1 1 0;
+
+    flex-wrap: wrap;
+
+    padding: 2rem;
+}
+
+#about-data .data {
+    align-items: center;
+
+    display: flex;
+
+    flex-direction: column;
+
+    justify-content: center;
+
+    margin-left: -1px;
+
+    margin-top: -1px;
+
+    padding: 2rem;
+
+    width: 50%;
+}
+
+#about-data .data:first-child {
+    border-bottom: 1px solid var(--secondary-text-color);
+
+    border-right: 1px solid var(--secondary-text-color);
+}
+
+#about-data .data:last-child {
+    border-top: 1px solid var(--secondary-text-color);
+    
+    border-left: 1px solid var(--secondary-text-color);
+}
+
+#about-data .data i {
+    background-color: transparent;
+
+    color: var(--main-color);
+
+    font-size: 4rem;
+
+    padding: 0;
+}
+
+.data .number {
+    font-size: 4rem;
+
+    font-weight: 900;
+}
+
+.data .text {
+    text-transform: uppercase;
+}
