Finalizada a seção de colaboradores da página

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -432,3 +432,64 @@ i {
 .author .author-job {
     color: var(--secondary-text-color);
 }
+
+/* employees */
+#team {
+    margin-bottom: 2rem;
+
+    position: relative;
+}
+
+#team h2 {
+    font-size: 3rem;
+
+    margin: 0 auto;
+
+    max-width: 1000px;
+
+    position: relative;
+
+    text-align: center;
+
+    z-index: 2;
+}
+
+#team h2 span {
+    color: var(--main-color);
+}
+
+#team .square {
+    background-color: var(--tertiary-color);
+
+    height: 100px;
+
+    left: 50%;
+
+    margin-left: -50px;
+
+    top: -25px;
+
+    width: 100px;
+}
+
+.employees {
+    display: flex;
+
+    gap: 2rem;
+
+    padding: 2rem;
+
+    text-align: center;
+}
+
+.employee-name {
+    color: var(--main-color);
+
+    font-size: 1.2rem;
+
+    font-weight: bold;
+
+    margin: .5rem 0;
+
+    text-transform: uppercase;
+}
